--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script src="js/app.js"></script>
-  <title>SPABadge</title>
-</head>
-<body>
-  <div class="container">
-    <div class="logo">
-      <h1> SPA Badge </h1>
-    </div>
-    <h1> SF Teachers </h1>
-      <ul>
-        <li><a href="#">Derek</a></li>
-        <li><a href="#">Hunter</a></li>
-        <li><a href="#">Jaclyn</a></li>
-        <li><a href="#">Julian</a></li>
-        <li><a href="#">Mihai</a></li>
-        <li><a href="#">Sarah</a></li>
-        <li><a href="#">Seba</a></li>
-        <li><a href="#">Shambhavi</a></li>
-        <li><a href="#">Walker</a></li>
-        <li><a href="sample-page.html">Sample Page (to see what the badges view should look like)</a></li>
-      </ul>
-  </div>
-</body>
+<html lang="en">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>SPABadge</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="logo">
+                <h1>
+                    SPA Badge
+                </h1>
+            </div>
+            <h1>
+                SF Teachers
+            </h1>
+        <div id="content"></div>
+        <div id="badges"></div>
+        <script id="teachers-template" type="text/x-handlebars-template">
+            <ul>
+                {{#teachers}}
+                    <li>
+                        <a href="#{{name}}">{{name}}</a>
+                    </li>
+                {{/teachers}}
+            </ul>
+        </script>
+        <script id="badges-template" type="text/x-handlebars-template">
+          <h1>{{name}}'s badges</h1>
+          <ul>
+            {{#badges}}
+            <li>{{title}}</li>
+            {{/badges}}
+          </ul>
+          <form>
+            <input type='text' > add a badge </input>
+            <input type="submit" value="Submit">
+          </form>
+        </script>
+        </div>
+    </body>
+    <script src="js/miniQuery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.js"></script>
+    <script src="js/app.js"></script>
 </html>
